# sem4task4

./: README.md
task4/: CMakeLists.txt
task4/my_client/src/: client.cpp
task4/my_server/inc/: film.h  film_gen.h
task4/my_server/src/: film.cpp  film_gen.cpp  main.cpp  server.cpp
